# market-reaction-forecaster

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  start.sh
.github/workflows/: ci.yml
.tmp-review/: cli.db  runtime.db
.tmp-review/cli-uploads/cassandra/: autoresearch-latest.json
.tmp-review/uploads/cassandra/: autoresearch-latest.json
alembic/: env.py
alembic/versions/: 0db5f1c0b8b8_add_validation_tracking.py  7014147e9da6_initial_market_forecaster_schema.py  9a6d4c1b2ef0_add_cassandra_analysis_artifacts.py  abc123_add_daily_predictions.py
app/: activity_service.py  auth.py  autoresearch.py  autoresearch_cli.py  billing.py  celery_app.py  config.py  data_sources.py  db.py  main.py  models.py  notifications.py  reporting.py  schemas.py  scoring.py  security.py  services.py  tasks.py  templates_context.py  universe.py  user_service.py  validation_cli.py
app/static/: app.js  auth.js  styles.css
app/templates/: app.html  auth.html  base.html  landing.html  legal.html  pricing.html
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/web/: README.md
docs/: architecture.md  business-proposal.md  cassandra-mvp.md  commercialization-package.md  launch-readiness.md  marketing-plan.md  mvp-spec.md  project-summary.md  validation-todo.md
docs/examples/: cassandra-autoresearch-example.json
tests/: conftest.py  test_admin_and_billing_api.py  test_auth_and_profile_api.py  test_cassandra_mvp.py  test_data_sources_billing_tasks_and_migrations.py  test_recommendations_and_reports_api.py  test_scoring_services_and_reporting_unit.py  test_user_service_unit.py  test_web_routes.py
