[project]
name = "market-reaction-forecaster"
version = "0.1.0"
description = "Production-ready consumer subscription app for AI-powered market reaction calls"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "boto3>=1.38.0,<2.0.0",
  "celery>=5.5.0,<6.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "itsdangerous>=2.2.0,<3.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "kombu>=5.3.5,<6.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "redis>=5.0.0,<6.0.0",
  "sentry-sdk>=2.28.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "stripe>=13.0.0,<14.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"
