[project]
name = "market-reaction-forecaster-api"
version = "0.1.0"
description = "FastAPI starter for the Market Reaction Forecaster MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

